@@ -1675,6 +1675,14 @@ void mgr_node_set(
   struct pbsnode   *pnode = NULL;
   struct pbsnode  **problem_nodes = NULL;
   struct prop       props;
+  long              dont_update_nodes = FALSE;
+
+  get_svr_attr_l(SRV_ATR_DontWriteNodesFile, &dont_update_nodes);
+  if (dont_update_nodes == TRUE)
+    {
+    req_reject(PBSE_CANT_EDIT_NODES, 0, preq, NULL, NULL);
+    return;
+    }
 
   if ((*preq->rq_ind.rq_manager.rq_objname == '\0') ||
       (*preq->rq_ind.rq_manager.rq_objname == '@') ||
@@ -1820,7 +1828,7 @@ void mgr_node_set(
           break;
         }
 
-      unlock_node(pnode, "mgr_node_set", (char *)"error", LOGLEVEL);
+      unlock_node(pnode, __func__, "error", LOGLEVEL);
       
       return;
       } /* END if (rc != 0) */ 
@@ -1832,7 +1840,7 @@ void mgr_node_set(
       mgr_log_attr(msg_man_set, plist, PBS_EVENTCLASS_NODE, pnode->nd_name);
       }
 
-    unlock_node(pnode, "mgr_node_set", (char *)"single_node", LOGLEVEL);
+    unlock_node(pnode, __func__, "single_node", LOGLEVEL);
     } /* END single node case */
 
   if (need_todo & WRITENODE_STATE)
@@ -2038,12 +2046,20 @@ static void mgr_node_delete(
   all_nodes_iterator *iter = NULL;
 
   struct pbsnode *pnode;
-  const char    *nodename = NULL;
+  const char     *nodename = NULL;
 
 
   svrattrl       *plist;
 
   char            log_buf[LOCAL_LOG_BUF_SIZE];
+  long            dont_update_nodes = FALSE;
+
+  get_svr_attr_l(SRV_ATR_DontWriteNodesFile, &dont_update_nodes);
+  if (dont_update_nodes == TRUE)
+    {
+    req_reject(PBSE_CANT_EDIT_NODES, 0, preq, NULL, NULL);
+    return;
+    }
 
   if ((*preq->rq_ind.rq_manager.rq_objname == '\0') ||
       (*preq->rq_ind.rq_manager.rq_objname == '@'))
@@ -2184,9 +2200,17 @@ void mgr_node_create(
   struct batch_request *preq)
 
   {
-  int   bad;
+  int       bad;
   svrattrl *plist;
-  int   rc;
+  int       rc;
+  long      dont_update_nodes = FALSE;
+
+  get_svr_attr_l(SRV_ATR_DontWriteNodesFile, &dont_update_nodes);
+  if (dont_update_nodes == TRUE)
+    {
+    req_reject(PBSE_CANT_EDIT_NODES, 0, preq, NULL, NULL);
+    return;
+    }
 
   plist = (svrattrl *)GET_NEXT(preq->rq_ind.rq_manager.rq_attr);
 
